# linkedinese

./: .env.example  .gitignore  LICENSE  README.md  app.py  cases.json  linkedin_speak.py  next.config.ts  package-lock.json  package.json  prompt_en_to_linkedin.md  prompt_linkedin_to_en.md  prompt_linkedin_to_en.v10.bak.md  pyproject.toml  run_experiment.py
app/: layout.tsx  page.tsx
app/api/translate/: route.ts
lib/: models.ts  prompts.ts  ratelimit.ts
static/: app.js  index.html  styles.css
